--- a/aur/softsusy/PKGBUILD
+++ b/aur/softsusy/PKGBUILD
@@ -3,11 +3,11 @@
 pkgname=softsusy
 pkgver=3.7.1
 pkgrel=1
-pkgdesc="This program provides a SUSY spectrum in the NMSSM, or the MSSM including flavour violation and with or without R-parity consistent with input Standard Model fermion mass/mixings and electroweak/strong coupling data."
+pkgdesc="package to provide a SUSY spectrum."
 arch=("i686" "x86_64")
 url="http://softsusy.hepforge.org"
 license=('GPL')
-depends=("gcc" "gcc-fortran")
+depends=("gcc-fortran")
 source=("http://www.hepforge.org/archive/softsusy/$pkgname-$pkgver.tar.gz")
 sha256sums=('6811c4e167c0f832477e20755ecbddb30711d1d1a53267646715221e1d3de585')
 
