--- a/aur/thepeg/PKGBUILD
+++ b/aur/thepeg/PKGBUILD
@@ -2,7 +2,7 @@
 
 _pkgrname=ThePEG
 pkgname=thepeg
-pkgver=2.0.2
+pkgver=2.0.3
 pkgrel=1
 pkgdesc="Toolkit for High Energy Physics Event Generation"
 arch=("i686" "x86_64")
@@ -10,11 +10,16 @@ url="http://thepeg.hepforge.org"
 license=('GPL2')
 depends=("gsl" "lhapdf" "hepmc" "rivet" "zlib" "fastjet" "boost")
 source=("http://www.hepforge.org/archive/thepeg/${_pkgrname}-$pkgver.tar.bz2")
-sha256sums=('d4249e019543d5c7520733292d2edfb0bdd9733177200a63837781ed6194789b')
+sha256sums=('c57ba68fbfda06a0ba256e06f276f91434bf2529a13f6287c051a4cd6da44634')
 
 build() {
   cd "${_pkgrname}-$pkgver"
-  ./configure --prefix=/usr --with-lhapdf=/usr --with-fastjet=/usr
+  sed -i 's/isnan/std::isnan/g' Persistency/PersistentOStream.h \
+      LesHouches/LesHouchesFileReader.cc \
+      Utilities/UnitIO.h
+  sed -i 's/isinf/std::isinf/g' Persistency/PersistentOStream.h \
+      Utilities/UnitIO.h
+  ./configure --prefix=/usr --with-lhapdf=/usr --with-fastjet=/usr --enable-unitchecks
   make
 }
 
