--- a/aur/whizard/PKGBUILD
+++ b/aur/whizard/PKGBUILD
@@ -1,8 +1,7 @@
 # Maintainer: Chan Beom Park <cbpark@gmail.com>
 
-_pkgname=WHIZARD
 pkgname=whizard
-pkgver=2.3.1
+pkgver=2.4.0
 pkgrel=1
 pkgdesc="A program system designed for the efficient calculation of multi-particle scattering cross sections and simulated event samples."
 arch=("i686" "x86_64")
@@ -10,8 +9,8 @@ url="http://whizard.hepforge.org"
 license=('GPL2')
 makedepends=(texlive-bin texlive-pictures ghostscript)
 depends=(ocaml gcc-fortran pythia lhapdf fastjet looptools hepmc)
-source=("http://www.hepforge.org/archive/$pkgname/${_pkgname}-${pkgver}.tar.gz")
-sha256sums=('6c2889d6c26fe26814f6aeaa34b10bf3d2b1e9b2067df6977bec8edac8e2e7bb')
+source=("http://www.hepforge.org/archive/$pkgname/${pkgname}-${pkgver}.tar.gz")
+sha256sums=('589c6e3cf6fa96248bec25094ade5ece563e9f28697a7f0bc187596852c5ef2a')
 
 build() {
   cd "$pkgname-$pkgver"
