--- a/aur/softsusy/PKGBUILD
+++ b/aur/softsusy/PKGBUILD
@@ -1,24 +1,24 @@
 # Maintainer: Chan Beom Park <cbpark@gmail.com>
 
 pkgname=softsusy
-pkgver=3.7.4
+pkgver=4.0
 pkgrel=1
 pkgdesc="This program provides a SUSY spectrum in the NMSSM, or the MSSM including flavour violation and with or without R-parity consistent with input Standard Model fermion mass/mixings and electroweak/strong coupling data."
 arch=("i686" "x86_64")
 url="http://softsusy.hepforge.org"
 license=('GPL')
-depends=("gcc-fortran")
-source=("http://www.hepforge.org/archive/softsusy/$pkgname-$pkgver.tar.gz")
-sha256sums=('0d72181549d4405067149f391b1c7ef72da932aa9b21cdd1529343386363545b')
+depends=("gcc-fortran" "looptools")
+source=("http://www.hepforge.org/archive/softsusy/${pkgname}-${pkgver}.tar.gz")
+sha256sums=('7f9b35e33ab330d279c33e1604a11cfba2a4b7503a2d0197d58de7d4239ec9cf')
 
 build() {
-  cd "$pkgname-$pkgver"
-  ./configure --prefix=/usr
-  make
+  cd "${pkgname}-${pkgver}"
+  ./configure --enable-looptools --prefix=/usr
+  MAKEFLAGS=-j1 make
 }
 
 package() {
-  cd "$pkgname-$pkgver"
+  cd "${pkgname}-${pkgver}"
   make DESTDIR="$pkgdir" install
   install -D -m644 COPYING "$pkgdir/usr/share/licenses/$pkgname/COPYING"
 }
