upgpkg: haskell-apply-refact 0.3.0.1-3

--- a/aur/haskell-apply-refact/PKGBUILD
+++ b/aur/haskell-apply-refact/PKGBUILD
@@ -3,13 +3,23 @@
 _hkgname=apply-refact
 pkgname=haskell-apply-refact
 pkgver=0.3.0.1
-pkgrel=2
+pkgrel=3
 pkgdesc="Perform refactorings specified by the refact library"
 arch=('i686' 'x86_64')
 url="https://hackage.haskell.org/package/${_hkgname}"
 license=("custom:BSD3")
-depends=("ghc>=8.0.1" "haskell-refact>=0.2" "haskell-ghc-exactprint>=0.5.2" "haskell-syb" "haskell-mtl" "haskell-transformers-base" "haskell-temporary" "haskell-filemanip" "haskell-unix-compat" "haskell-optparse-applicative>=0.13")
-source=("http://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz")
+depends=("ghc>=8.0.1"
+         "haskell-filemanip"
+         "haskell-ghc-exactprint>=0.5.2"
+         "haskell-mtl"
+         "haskell-optparse-applicative>=0.13"
+         "haskell-refact>=0.2"
+         "haskell-syb"
+         "haskell-temporary"
+         "haskell-transformers-base"
+         "haskell-unix-compat")
+options=('strip')
+source=("https://hackage.haskell.org/package/${_hkgname}-${pkgver}/${_hkgname}-${pkgver}.tar.gz")
 sha256sums=('1754bd300db92fdf668d4698af053d4da686512264275478946b7e0710c5e814')
 
 build() {
