upgpkg: haskell-ghc-exactprint 0.5.5.0-1

--- a/aur/haskell-ghc-exactprint/PKGBUILD
+++ b/aur/haskell-ghc-exactprint/PKGBUILD
@@ -2,28 +2,24 @@
 
 _hkgname=ghc-exactprint
 pkgname=haskell-ghc-exactprint
-pkgver=0.5.4.0
-pkgrel=4
+pkgver=0.5.5.0
+pkgrel=1
 pkgdesc="Using the API Annotations available from GHC 7.10.2, this library provides a means to round trip any code that can be compiled by GHC, currently excluding lhs files."
-arch=('i686' 'x86_64')
 url="https://hackage.haskell.org/package/${_hkgname}"
+arch=('x86_64')
 license=("custom:BSD3")
-depends=("ghc>=7.10.2"
-         "haskell-ghc-paths>=0.1"
-         "haskell-mtl>=2.2.1"
-         "haskell-syb>=0.5"
-         "haskell-free>=4.12")
+depends=('ghc-libs' 'haskell-ghc-paths' 'haskell-mtl' 'haskell-syb' 'haskell-free')
+makedepends=('ghc' 'haskell-filemanip' 'haskell-hunit' 'haskell-diff' 'haskell-silently')
 source=("https://hackage.haskell.org/package/${_hkgname}-${pkgver}/${_hkgname}-${pkgver}.tar.gz")
-sha256sums=('d39a76c0659290075adb053c22fe4147c395a8e29f512008b16de418039aeece')
+sha512sums=('4f3a23e2fc0009fcfba059b733cc118d8822eaa06fdfe75a5a260a4132072ed432699f627a03f7310165922b8bafc39ad71889e068a5cc306b79ac918aab592a')
 
 build() {
     cd "${srcdir}/${_hkgname}-${pkgver}"
 
-    runhaskell Setup configure -O --enable-shared --enable-executable-dynamic \
-        --prefix=/usr --docdir="/usr/share/doc/${pkgname}" \
-        --libsubdir=\$compiler/site-local/\$pkgid
+    runhaskell Setup configure -O --enable-shared --enable-executable-dynamic --disable-library-vanilla \
+        --prefix=/usr --docdir="/usr/share/doc/${pkgname}" --enable-tests \
+        --dynlibdir=/usr/lib --libsubdir=\$compiler/site-local/\$pkgid
     runhaskell Setup build
-    runhaskell Setup haddock --hoogle --html
     runhaskell Setup register --gen-script
     runhaskell Setup unregister --gen-script
     sed -i -r -e "s|ghc-pkg.*update[^ ]* |&'--force' |" register.sh
@@ -35,12 +31,7 @@ package() {
 
     install -D -m744 register.sh   "${pkgdir}/usr/share/haskell/register/${pkgname}.sh"
     install -D -m744 unregister.sh "${pkgdir}/usr/share/haskell/unregister/${pkgname}.sh"
-    install -d -m755 "${pkgdir}/usr/share/doc/ghc/html/libraries"
-    ln -s "/usr/share/doc/${pkgname}/html" "${pkgdir}/usr/share/doc/ghc/html/libraries/${_hkgname}"
     runhaskell Setup copy --destdir="${pkgdir}"
     install -D -m644 "LICENSE" "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
     rm -f "${pkgdir}/usr/share/doc/${pkgname}/LICENSE"
-
-    # Remove static libs
-    find "$pkgdir"/usr/lib -name "*.a" -delete
 }
