--- a/aur/pmix/PKGBUILD
+++ b/aur/pmix/PKGBUILD
@@ -2,23 +2,23 @@
 
 pkgname=pmix
 pkgver=2.1.1
-pkgrel=2
+pkgrel=3
 pkgdesc='Process Management Interface Exascale'
 url='https://pmix.github.io/pmix/'
 arch=('x86_64')
 license=('custom:OpenMPI')
-conflicts=('openmpi' 'slurm-llnl')
-depends=('gcc-libs' 'libevent' 'zlib' 'libltdl' 'munge')
+conflicts=('openmpi')
+depends=('gcc-libs' 'libevent' 'zlib' 'munge')
 source=(https://github.com/pmix/pmix/releases/download/v2.1.1/${pkgname}-${pkgver}.tar.bz2)
 sha256sums=('1530a40d76474ebdd98581d2c6d4be57c928e69a2b86e11afc4643fde2a667e0')
 
 build() {
   cd ${pkgname}-${pkgver}
   ./configure --prefix=/usr \
-              --with-libevent=/usr \
-              --with-zlib=/usr \
-              --with-libltdl=/usr \
-              --with-munge=/usr
+              --disable-pmi-backward-compatibility \
+              --with-libevent \
+              --with-zlib \
+              --with-munge
   make
 }
 
