--- a/aur/openmpi-slurm-llnl/PKGBUILD
+++ b/aur/openmpi-slurm-llnl/PKGBUILD
@@ -2,19 +2,20 @@
 
 _pkgname=openmpi
 pkgname=openmpi-slurm-llnl
-pkgver=3.0.1
+pkgver=3.1.0
 pkgrel=1
 pkgdesc='High performance message passing library (MPI) integrated with Slurm'
 url='https://www.open-mpi.org'
 arch=('x86_64')
 license=('custom:OpenMPI')
 conflicts=('openmpi')
-depends=('libltdl' 'hwloc' 'openssh' 'zlib' 'libevent' 'pmix' 'slurm-llnl')
+depends=('libltdl' 'hwloc' 'openssh' 'zlib' 'libnl' 'libevent' 'pmix' 'slurm-llnl')
 makedepends=('inetutils' 'valgrind' 'gcc-fortran')
 optdepends=('gcc-fortran: fortran support')
 options=('staticlibs')
 source=(https://www.open-mpi.org/software/ompi/v${pkgver%.*}/downloads/${_pkgname}-${pkgver}.tar.bz2)
-sha512sums=('15fad504ba743d564e7196b62a112027798d4b26e9c8d11d9c1c00ac2968f1858ebc168df30473104c5a31f71e38ab558204b598260b535a12b6094aa77182b8')
+sha256sums=('b25c044124cc859c0b4e6e825574f9439a51683af1950f6acda1951f5ccdf06c')
+sha512sums=('23a43a16683c4b56f96c711fe009d992f3bd4e10cf9ef55091865a5b1aed195cc1de6a87720564f70d3b60a2441966bab39cda8969293aeb118cda10aead3dee')
 
 build() {
   cd ${_pkgname}-${pkgver}
@@ -59,3 +60,5 @@ package() {
   echo "/usr/lib/${_pkgname}" > "${pkgdir}"/etc/ld.so.conf.d/${_pkgname}.conf
   install -Dm 644 LICENSE -t "${pkgdir}/usr/share/licenses/${_pkgname}"
 }
+
+# vim: ts=2 sw=2 et:
