upgpkg: haskell-gtk2 0.15.4-1

--- a/aur/haskell-gtk2/PKGBUILD
+++ b/aur/haskell-gtk2/PKGBUILD
@@ -2,16 +2,26 @@
 
 _hkgname=gtk
 pkgname=haskell-gtk2
-pkgver=0.15.0
+pkgver=0.15.4
 pkgrel=1
 pkgdesc="The core library of the Gtk2Hs suite of libraries for Haskell based on Gtk+."
 url="http://hackage.haskell.org/package/${_hkgname}"
 arch=('x86_64')
 license=('LGPL-2.1')
 makedepends=('ghc' 'haskell-gtk2hs-buildtools')
-depends=('ghc-libs' 'haskell-mtl' 'haskell-text' 'haskell-glib' 'haskell-pango' 'haskell-cairo' 'gtk2')
+depends=('ghc-libs'
+         'haskell-mtl'
+         'haskell-text'
+         'haskell-glib'
+         'haskell-pango'
+         'haskell-cairo'
+         'gobject-introspection'
+         'gobject-introspection-runtime'
+         'gtksourceview3'
+         'webkitgtk'
+         'webkit2gtk')
 source=("https://hackage.haskell.org/packages/archive/${_hkgname}/${pkgver}/${_hkgname}-${pkgver}.tar.gz")
-sha512sums=('70aa55d400c23ecb6327acaf596c91002d1f8a5277fc1ff7ef1d360b1890c0e508035ac0378ce6018afd486120173e651ce127dc56aa7ca1c03817f82f22a83e')
+sha512sums=('70868d82c670b4fa7af3846a86cdd8f831d5178d6abc03264d0f56ff5986160abef95c77811e30fa0b71e60721ce2dfca1908aa5ac4865b71c23611fda88cc78')
 
 build() {
     cd "${srcdir}/${_hkgname}-${pkgver}"
