--- a/aur/herwig/PKGBUILD
+++ b/aur/herwig/PKGBUILD
@@ -2,7 +2,7 @@
 
 _pkgname=Herwig
 pkgname=herwig
-pkgver=7.1.5
+pkgver=7.2.1
 pkgrel=1
 pkgdesc="Herwig is a multi-purpose particle physics event generator."
 arch=('x86_64')
@@ -11,7 +11,7 @@ license=('GPL2')
 depends=("gcc-fortran" "thepeg" "boost-libs" "fastjet" "gsl" "lhapdf")
 makedepends=("sudo" "sed")
 source=("http://www.hepforge.org/archive/${pkgname}/${_pkgname}-${pkgver}.tar.bz2")
-sha512sums=('a56a5be3c27244deb39486671a5cc40e95685aa22ebcab70c413cc2aaf5f124166e9c8b7f42da1e15762b6ca8ba96fc7b71982fdfea06a77ddc7c2c9dc9b7aca')
+sha512sums=('bd1e6a3ba019de290666f75e9514cf29d2b7c7ae60ebcae393adb978761074129a4e6c43355664fb371a2da879623b384697cd6fcfd38e263f2349f2ba1d6ba0')
 
 prepare() {
   pdfs=(MMHT2014nlo68cl MMHT2014lo68cl)
@@ -31,6 +31,8 @@ prepare() {
 build() {
   cd "$srcdir/${_pkgname}-${pkgver}"
 
+  # from gcc 10, it enforces type mismatching.
+  export FCFLAGS="${FCFLAGS} -fallow-argument-mismatch"
   ./configure --prefix=/usr --with-thepeg=/usr
   make ${MAKEFLAGS}
 }
